; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/musashi/extr_m68kdasm.c_d68020_trapcc_32.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/musashi/extr_m68kdasm.c_d68020_trapcc_32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M68020_PLUS = common dso_local global i32 0, align 4
@g_dasm_str = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"trap%-2s  %s; (2+)\00", align 1
@g_cc = common dso_local global i8** null, align 8
@g_cpu_ir = common dso_local global i32 0, align 4
@DASMFLAG_STEP_OVER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @d68020_trapcc_32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @d68020_trapcc_32() #0 {
  %1 = load i32, i32* @M68020_PLUS, align 4
  %2 = call i32 @LIMIT_CPU_TYPES(i32 %1)
  %3 = load i32, i32* @g_dasm_str, align 4
  %4 = load i8**, i8*** @g_cc, align 8
  %5 = load i32, i32* @g_cpu_ir, align 4
  %6 = ashr i32 %5, 8
  %7 = and i32 %6, 15
  %8 = sext i32 %7 to i64
  %9 = getelementptr inbounds i8*, i8** %4, i64 %8
  %10 = load i8*, i8** %9, align 8
  %11 = call i8* (...) @get_imm_str_u32()
  %12 = call i32 @sprintf(i32 %3, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8* %10, i8* %11)
  %13 = load i32, i32* @DASMFLAG_STEP_OVER, align 4
  %14 = call i32 @SET_OPCODE_FLAGS(i32 %13)
  ret void
}

declare dso_local i32 @LIMIT_CPU_TYPES(i32) #1

declare dso_local i32 @sprintf(i32, i8*, i8*, i8*) #1

declare dso_local i8* @get_imm_str_u32(...) #1

declare dso_local i32 @SET_OPCODE_FLAGS(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
